[package]
name = "bitcoded"
version = "0.1.3"
edition = "2021"
description = "Comprehensive Rust library for all your programming needs"
license = "GPL-3.0-or-later"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
